// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export stories controller GET /internal/export-stories/:layer/:type Возвращает список экспортов, если они есть для переданных layer и enum 1`] = `
Object {
  "exportStories": Array [
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 1,
      "layer": "test",
      "position": 0,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 1,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 1,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 1,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 2,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 1,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 0",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-0",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 1,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 2,
      "layer": "test",
      "position": 1,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 2,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 3,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 2,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 4,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 2,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 1",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-1",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 2,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 3,
      "layer": "test",
      "position": 2,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 3,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 5,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 3,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 6,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 3,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 2",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-2",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 3,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 4,
      "layer": "test",
      "position": 3,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 4,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 7,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 4,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 8,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 4,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 3",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-3",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 4,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 5,
      "layer": "test",
      "position": 4,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 5,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 9,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 5,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 10,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 5,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 4",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-4",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 5,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 6,
      "layer": "test",
      "position": 5,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 6,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 11,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 6,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 12,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 6,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 5",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-5",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 6,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
  ],
}
`;

exports[`Export stories controller GET /internal/export-stories/:layer/:type Возвращает список экспортов, если они есть для переданных layer и enum 2`] = `
Object {
  "exportStories": Array [
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 7,
      "layer": "prod",
      "position": 0,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 7,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 13,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 7,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 14,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 7,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 6",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-6",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 7,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 8,
      "layer": "prod",
      "position": 1,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 8,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 15,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 8,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 16,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 8,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 7",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-7",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 8,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 9,
      "layer": "prod",
      "position": 2,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 9,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 17,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 9,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 18,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 9,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 8",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-8",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 9,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
    Object {
      "createdAt": "2022-03-10T08:30:00.000Z",
      "id": 10,
      "layer": "prod",
      "position": 3,
      "story": Object {
        "createdAt": "2022-03-10T08:30:00.000Z",
        "dirty": true,
        "geo": Array [
          1,
        ],
        "id": 10,
        "imageUrl": "/test/materials/images/59991017-3390-4065-ba4a-cb225645dc5b/image/default_1.jpg",
        "pages": Array [
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 1",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 19,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 1,
            "storyId": 10,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 1",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
          Object {
            "backgroundColor": "#fffaa1",
            "backgroundSolid": true,
            "body": "Текст слайда 2",
            "buttonColor": "#fffcc1",
            "buttonText": "Текст кнопки 1",
            "buttonUrl": "https://example.com/1",
            "createdAt": "2022-03-10T08:30:00.000Z",
            "duration": 10,
            "id": 20,
            "imageUrl": "/59991017-3390-4065-ba4a-cb225645dc5b/1/default_1",
            "ratio": "square",
            "slide": 2,
            "storyId": 10,
            "textColor": "#fffbb1",
            "theme": "white",
            "title": "Заголовок слайда 2",
            "updatedAt": "2022-03-10T08:30:00.000Z",
          },
        ],
        "published": false,
        "revision": 0,
        "rotationProbability": 0.212,
        "tags": Array [],
        "textColor": "#fefefe",
        "title": "Заголовок истории 9",
        "updatedAt": "2022-03-10T08:30:00.000Z",
        "urlPart": "story-url-part-9",
        "uuid": "59991017-3390-4065-ba4a-cb225645dc5b",
        "version": "images",
        "xAndroidAppVersion": "1.0.1",
        "xAndroidAppVersionTo": "1.0.1",
        "xIosAppVersion": "1.0.1",
        "xIosAppVersionTo": "1.0.1",
      },
      "storyId": 10,
      "type": "default",
      "updatedAt": "2022-03-10T08:30:00.000Z",
    },
  ],
}
`;
